Resolve image Problem

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
             <a class="link-button" target="_blank" href="https://www.linkedin.com/company/programminghero/">HIRE ME</a>
         </div>
         <div class="section1-half-width">
-            <img src="/images/jhankar.png" alt="Profile Picture">
+            <img src="images/jhankar.png" alt="Profile Picture">
         </div>
     </section>
     <section class="middle-section">
-        <div class="section1-half-width"><img src="/images/jhankar2.png" alt=""></div>
+        <div class="section1-half-width"><img src="images/jhankar2.png" alt=""></div>
         <div class="section1-half-width">
             <h2>Dream Area</h2>
             <h3>Become a web developer</h3>
